[gd_scene load_steps=15 format=2]

[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bullet.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Ataque a Rango.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 2.87194
height = 2.86115

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 3.52
damping_random = 0.4
angle = 90.0
angle_random = 0.5
scale = 2.0

[node name="Bullet" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -6, 0 )
frames = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]

[node name="HitboxShape2d" parent="Hitbox" index="0"]
visible = false
position = Vector2( 1, 0 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.920713, 1.04459 )
collision_mask = 61

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 1, 0 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 100
lifetime = 5.0
explosiveness = 0.1
visibility_rect = Rect2( -500, -500, 500, 500 )
local_coords = false
process_material = SubResource( 10 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
